sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: auth.indigo.dalmura.cloud
    external-dns.kubernetes.io/target: indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: traefik-public-geoblock@kubernetescrd,traefik-public-ratelimit@kubernetescrd,traefik-public-crowdsec-bouncer@kubernetescrd,traefik-public-anubis@kubernetescrd,traefik-public-security-headers@kubernetescrd,authentik-authentik-csp@kubernetescrd
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - auth.indigo.dalmura.cloud
      secretName: authentik-cert
  rules:
  - host: auth.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 80
