sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/authentik/network-policy-authentik-redis.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-redis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: master
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress: []
