sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/authentik/network-policy-postgres.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-network-policy
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db
  ingress:
    # Allow access from the CNPG Operator
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
        - matchLabels:
            cnpg.io/cluster: authentik-db
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP

    # Allow access from the local DB nodes and Authentik
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
        - matchLabels:
            cnpg.io/cluster: authentik-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    # Allow VictoriaMetrics to scrape metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
